--- a/src/components/play/index.less
+++ b/src/components/play/index.less
@@ -1,5 +1,7 @@
-@play-height: 140px;
-
+@play-height: 240px;
+.play-name {
+  padding: 5px 0;
+}
 .play-image {
   flex-basis: 200px;
   flex-shrink: 0;
@@ -46,6 +48,7 @@
   min-width: 30px;
   height: 24px;
   line-height: 24px;
-  border: solid 1PX #eee;
   border-radius: 3px;
+  background: #CEBC08;
+  color: #fff;
 }
