--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -4,8 +4,9 @@
   bottom: 0;
   width: 100vw;
   height: 110px;
-  border-top: solid 1px #e2e3e7;
-  background: white;
+  border-top: solid 1px #053D43;
+  background: #053D43;
+  color: #fff;
 }
 
 .tabbar-list-item-icon {
