--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,18 +1,17 @@
 .page {
-  background: white;
+  background: rgba(5,61,67,0.4);
 }
 
 .header-swiper {
-  margin: 0 auto;
-  width: 98vw;
-  height: 300px;
+  // margin: 0 auto;
+  height: 560px;
   border-radius: 8px;
   background: #eee;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
 }
-
 .indicators {
-  margin-top: 20px;
+  background: transparent;
+  transform: translateY(-20px);
 }
 .indicator {
   margin: 0 8px;
@@ -23,11 +22,25 @@
   transition: .3s;
 
   &.actived {
-    width: 32px;
-    background-color: #57565a;
+    background-color: rgb(208,18,50);
   }
 }
-
+.tips {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  margin: 10px 20px;
+  border-radius: 10px;
+  background: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 20px;
+  .tips-content {
+    width: 70%;
+    height: 25px;
+    font-weight: normal;
+  }
+}
 .entrys-con {
   position: sticky;
   top: 0;
@@ -51,13 +64,12 @@
 }
 
 .rooms-con {
-  margin-top: 20px;
+  margin: 20px 0;
   height: 360px;
-
+  background: transparent;
   .room {
     width: 330px;
     border-radius: 15px;
-    background: #eee;
   }
   .room-big {
     flex-basis: 50%;
@@ -66,4 +78,31 @@
   .room-small {
     height: 170px;
   }
+  image {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+  .fcc {
+    position: relative;
+    .tool-tip {
+      position: absolute;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      background: rgba(98,98,104,0.64);
+      color: #fff;
+      border-radius: 10px;
+
+    }
+  }
+}
+
+.segment-header{
+  color: #F2DC07;
+}
+.plays-con {
+  background: transparent;
 }
