--- a/src/components/play/index.less
+++ b/src/components/play/index.less
@@ -52,3 +52,10 @@
   background: #CEBC08;
   color: #fff;
 }
+.starBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  min-height: @play-height;
+}
