--- a/src/components/threadCard/index.less
+++ b/src/components/threadCard/index.less
@@ -48,6 +48,7 @@
   margin: 0 auto;
   margin-top: 17vh;
   box-sizing: border-box;
+  overflow:hidden;
   width: 650px;
   height: 200px;
   border-top: 20px solid #4ec3ff;
