--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -3,8 +3,9 @@
 }
 
 .header-swiper {
-  // margin: 0 auto;
-  height: 560px;
+  margin: 0 auto;
+  width: 100vw;
+  height: 460px;
   border-radius: 8px;
   background: #eee;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
