--- a/src/pages/packages/play/pages/prepare/index.less
+++ b/src/pages/packages/play/pages/prepare/index.less
@@ -9,7 +9,7 @@
   left: 0;
   padding: 10px 30px;
   width: 100vw;
-  background: white;
+  background: #eee; 
   border-top: solid 1px #eee;
   border-bottom: solid 1px #eee;
   z-index: 1;
