--- a/src/components/mainButton/index.less
+++ b/src/components/mainButton/index.less
@@ -3,6 +3,7 @@
 
 .main-button-area {
   box-sizing: border-box;
+  overflow:hidden;
   padding: 0 30px;
   z-index: 999;
 }
@@ -14,7 +15,7 @@
   line-height: 98px !important;
   font-size: 34px !important;
   border: none !important;
-  border-radius: 50px !important;
+  // border-radius: 50px !important;
   color: white !important;
   background-image: linear-gradient(63deg, #4eacff 0%, #4ec3ff 30%, #4ec3ff 70%, #4ed8ff 100%, #dddddd 100%) !important;
   background-size: 100% 100%;
@@ -22,7 +23,7 @@
   transition: .2s;
 
   &.disabled {
-    background-image: linear-gradient(63deg, #4eacff 0%, #4ec3ff 0%, #4ec3ff 0%, #4ed8ff 0%, #dddddd 25%) !important;
+    background-image: linear-gradient(63deg, #4eacff 0%, #4ec3ff 0%, #4ec3ff 0%, #4ed8ff 0%, #dddddd 0%) !important;
     animation: shake .1s ease-in-out;
   }
   @keyframes shake {
@@ -56,10 +57,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 750px;
+  // position: fixed;
+  // bottom: 0;
+  // left: 0;
+  // width: 750px;
   height: 140px;
   background: @page-background-color;
 }
