--- a/src/pages/room/index.less
+++ b/src/pages/room/index.less
@@ -1,3 +1,7 @@
+.page {
+  background: rgba(5,61,67,0.4);
+  padding-bottom: 0px;
+}
 .header-swiper {
   margin: 0 auto;
   width: 100vw;
@@ -10,47 +14,11 @@
   }
 }
 
-.segment-info {
-  padding-bottom: 30px;
-  border-top: solid 1px #eee;
-
-  .name-con {
-    margin-top: 20px;
-
-    .star {
-      line-height: 15px;
-      color: rgba(255, 204, 77, 1);
-    }
-  }
-
-  .tags-con {
-    .tag {
-      margin-top: 10px;
-      margin-right: 8px;
-      padding: 2px 8px;
-      min-width: 30px;
-      height: 24px;
-      line-height: 24px;
-      border: solid 1PX #eee;
-      border-radius: 3px;
-    }
-    .meta-tag {
-      border: solid 1PX #f0cfcf;
-    }
-  }
-
-  .block-intro {
-    .intro {
-      line-height: 28px;
-    }
-  }
-}
 
 .roles-con {
   position: relative;
   padding: 20px 30px;
   border-radius: 8px;
-  background: #fafafa;
 
   .roles-avatar-con {
     padding-bottom: 15px;
@@ -84,33 +52,150 @@
     line-height: 30px;
     min-height: 150px;
     transition: .1s;
+  }
+}
+.detail {
+  padding: 30px;
+  .segment-info {
+    padding-bottom: 30px;
 
-    .info-item {
-      display: flex;
-      margin-top: 6px;
+    .name-con {
+      background: #011A1D;
+      font-size: 28px;
+      height: 60px;
+      line-height: 60px;
+      padding: 0 40px;
+      .room-name {
+        color: #F2DC07;
+        .author {
+          color: #fff;
+          font-size: 20px;
+          margin-left: 40px;
+        }
+      }
+      .stars-con {
+        color: #E76E1A;
+      }
+      .star {
+        line-height: 15px;
+        color: rgba(255, 204, 77, 1);
+      }
     }
+
+    .tags-con {
+      .tag {
+        margin-top: 10px;
+        margin-right: 8px;
+        padding: 2px 8px;
+        min-width: 30px;
+        height: 24px;
+        line-height: 24px;
+        border: solid 1PX #eee;
+        border-radius: 3px;
+      }
+      .meta-tag {
+        border: solid 1PX #f0cfcf;
+      }
+    }
+
+    .block-intro {
+      .intro {
+        line-height: 28px;
+      }
+    }
+  }
+  .detail-intro {
+    border: 1px solid #fff;
+    border-top:none;
+    border-bottom-left-radius:8px;
+    border-bottom-right-radius: 8px;
+    padding: 20px;
+    color: #fff;
+  }
+}
+.info-item {
+  display: flex;
+  margin-top: 6px;
+  height: 100px;
+  .left {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    image {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .right {
+    margin-left: 20px;
+    flex: 1;
     .info-title {
-      display: inline-block;
-      min-width: 80px;
-      flex-shrink: 0;
+      display: block;
       font-size: 22px;
-      font-weight: bold;
+      color: #F2DC07;
+      height: 30px;
     }
     .info-content {
-      display: inline-block;
-      margin-left: 12px;
+      display: block;
+      height: 60px;
       font-size: 22px;
       color: #444;
       letter-spacing: 1px;
+      overflow: hidden;
     }
   }
-  .mask {
-    position: absolute;
-    bottom: 30px;
-    left: 0;
-    width: 100%;
-    height: 40px;
-    border-radius: 8px;
-    background: linear-gradient(to top, rgba(250,250,250,1), rgba(250,250,250,.1));
+}
+.segment-comments {
+  padding: 40px;
+}
+.detail-star {
+  border-top: 1px solid  rgb(140,154,159);
+  padding: 40px;
+  color: rgb(5,61,67);
+  font-size: 20px;
+  .title {
+    display: flex;
+    font-size: 25px;
+    justify-content: space-between;
+  }
+  .content {
+    .number {
+      font-weight: bold;
+      font-size: 80px;
+      color: #E76E1A;
+    }
+    .star-content {
+      display:inline-block;
+      position: relative;
+    }
+    .people-number {
+      font-size: 20px;
+      display:flex;
+      justify-content: space-between;
+      .filter {
+        color: #fff;
+        .active {
+          color: #F2DC07;
+        }
+      }
+    }
+  }
+}
+.button {
+  height: 80px;
+  line-height: 80px;
+  display: flex;
+  font-size: 30px;
+  .left {
+    width: 50%;
+    background: #F2DC07;
+    color: #fff;
+    text-align: center;
+  }
+  .right {
+    width: 50%;
+    background: #E76E1A;
+    color: #fff;
+    text-align: center;
   }
 }
