fix: setting 样式问题

--- a/src/pages/packages/play/pages/setting/index.less
+++ b/src/pages/packages/play/pages/setting/index.less
@@ -2,6 +2,18 @@
     background: rgba(5,61,67,0.4);
     padding-bottom: 0px;
   }
+  .header-swiper {
+    margin: 0 auto;
+    width: 100vw;
+    height: 300px;
+    background: #eee;
+  
+    .header-image {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  
   .detail {
     padding: 30px;
     .segment-info {
