--- a/src/pages/packages/play/pages/camera/index.less
+++ b/src/pages/packages/play/pages/camera/index.less
@@ -1,25 +1,34 @@
 .page {
-    background: rgba(5,61,67,0.4);
-    padding-bottom: 0px;
+  background: rgba(5,61,67,0.4);
+  padding-bottom: 0px;
+  display: flex;
+  flex-direction: column;
+  .camera {
+    // flex:1;
+    width: 100%;
+    height: 100vh;
+  }
+  .wxfeature-footer {
+    position:fixed;
+    bottom: 0px;
+    background: #fff;
+    width: 100%;
+    height: 260px;
     display: flex;
-    flex-direction: column;
-    .camera {
-      flex:1;
+    justify-content: space-around;
+    align-items: center;
+    .camera-button {
+      background: rgba(3, 98, 201, 0.4);
+      border: 1px solid  rgba(3, 98, 201, 0.4);
+      color: #fff;
+      font-weight: bold;
+      width: 400px;
     }
-    .wxfeature-footer {
-      background: #fff;
-      height: 260px;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      .camera-button {
-        background: rgba(3, 98, 201, 0.4);
-        border: 1px solid  rgba(3, 98, 201, 0.4);
-        color: #fff;
-        font-weight: bold;
-        width: 800px;
-      }
+    image {
+      width: 60px;
+      height: 60px;
+      padding: 30px;
     }
   }
-  
- 
+}
+
