--- a/src/pages/account/index.less
+++ b/src/pages/account/index.less
@@ -198,6 +198,118 @@
 .gameBox {
   width: 100%;
   height: 100vh;
-  background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@2.0/src/res/game/bg1.jpg') center no-repeat;
+  background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@3.0/src/res/game/bg1.jpg') center no-repeat;
   background-size: 100% 100%;
+  position:relative;
+  .tipButton {
+    display:inline-block;
+    background:rgba(5,61,67,0.3);
+    color: #fff;
+    font-size: 28px;
+    padding: 20px;
+    min-width: 120px;
+    border-radius: 20px;
+    text-align: center;
+    position: absolute;
+  }
+}
+@action-segment-height: 110px;
+.action-segment {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 15vw;
+  background: rgba(5,61,67,0.6);
+  z-index: 1;
+  color: #fff;
+  .actions-con {
+    padding-bottom: 10px;
+    flex-direction:  column;
+
+    .action-con {
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      transition: .26s;
+
+      .iconfont {
+        font-size: 42px;
+      }
+      .action-name {
+        margin-top: 3px;
+      }
+    }
+  }
+  .action-con-hover {
+    background-color: #eee;
+  }
+}
+
+@threads-segment-height: 270px;
+.threads-segment {
+  position: fixed;
+  left: 0;
+  bottom: -@threads-segment-height;
+  padding: 0 25px;
+  width: 100vw;
+  height: @threads-segment-height;
+  background: transparent;
+  border-top: solid 1px #eee;
+  box-shadow: 0 0 15px rgba(0,0,0,.1);
+  transition: .3s ease-out;
+
+  &.active {
+    bottom: @action-segment-height;
+  }
+
+  .thread-con,
+  .thread-collections-con {
+    width: 100%;
+    min-height: 60px;
+    overflow-x: scroll;
+
+    ::-webkit-scrollbar {
+      width: 100px;
+      height: 3px;
+      background: rgba(0, 0, 0, 0.3);
+    }
+  }
+  .thread-collection {
+    display: inline-block;
+    margin-top: 20px;
+    margin-right: 8px;
+    padding: 2px 8px;
+    min-width: 70px;
+    height: 40px;
+    line-height: 40px;
+    border: solid 1PX #eee;
+    border-radius: 3px;
+    font-size: 22px;
+  }
+}
+
+.panelMock {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background: rgba(0,0,0,0.7);
+  z-index: 10;
+  .panel {
+    position: absolute;
+    bottom: 0px;
+    width: 100vw;
+    height: 60vh;
+    background: #fff;
+    border-radius: 20px 20px 0 0;
+    .paneltop {
+      text-align: right;
+      .closeBtn {
+        height: 50px;
+        width: 50px;
+      }
+    }
+  }
+
 }
