--- a/src/components/play/index.less
+++ b/src/components/play/index.less
@@ -1,11 +1,11 @@
-@play-height: 240px;
+@play-height: 220px;
 .play-name {
   padding: 5px 0;
 }
 .play-image {
-  flex-basis: 200px;
+  flex-basis: 180px;
   flex-shrink: 0;
-  width: 200px;
+  width: 180px;
   height: @play-height;
   background: #eee;
 }
@@ -58,4 +58,23 @@
   justify-content: center;
   text-align: center;
   min-height: @play-height;
+}
+.playButton {
+  background: #E76E1A;
+  color: #fff;
+  padding: 5px;
+  font-size: 20px;
+  display: inline-block;
+  border-radius: 5px;
+}
+.thirdFlex {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+}
+.distance {
+  height: 50px;
 }
