--- a/src/pages/account/index.less
+++ b/src/pages/account/index.less
@@ -1,315 +1,124 @@
 .page {
   background: rgba(5,61,67,0.4);
-  padding-bottom: 0px;
 }
 
-.roles-con {
-  position: relative;
-  margin: 20px 30px;
-  padding: 20px;
-  border-radius: 8px;
-  background: rgba(5,61,67,0.6);
-  .roles-avatar-con {
-    padding-bottom: 15px;
-    width: 100%;
-
-    .role {
-      min-width: 80px;
-      margin-right: 20px;
-      transition: .1s;
-      transform: scale(.8,.8);
-      &.acitve {
-        transition: .1s;
-        transform: scale(1,1);
-      }
-
-      .role-icon {
-        width: 70px;
-        height: 70px;
-        border-radius: 50%;
-      }
-      .role-name {
-        margin-top: 8px;
-        font-size: 24px;
-      }
-    }
-  }
-  .role-intro {
-    border-top: solid 1px #eee;
-    background: #fafafa;
-    padding: 25px 0;
-    line-height: 30px;
-    min-height: 150px;
-    transition: .1s;
-  }
-}
-.info-item {
-  display: flex;
-  margin-top: 6px;
-  height: 100px;
-  .left {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    image {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .right {
-    margin-left: 20px;
-    flex: 1;
-    .info-title {
-      display: block;
-      font-size: 22px;
-      color: #F2DC07;
-      height: 30px;
-    }
-    .info-content {
-      display: block;
-      height: 60px;
-      font-size: 22px;
-      color: #053D43;
-      letter-spacing: 1px;
-      overflow: hidden;
-    }
-  }
-}
-.segment-comments {
-  padding: 40px;
-}
-.detail-star {
-  border-top: 1px solid  rgb(140,154,159);
-  padding: 40px;
-  color: rgb(5,61,67);
-  font-size: 20px;
-  .title {
-    display: flex;
-    font-size: 25px;
-    justify-content: space-between;
-  }
-  .content {
-    .number {
-      font-weight: bold;
-      font-size: 80px;
-      color: #E76E1A;
-    }
-    .star-content {
-      display:inline-block;
-      position: relative;
-    }
-    .people-number {
-      font-size: 20px;
-      display:flex;
-      justify-content: space-between;
-      .filter {
-        color: #fff;
-        .active {
-          color: #F2DC07;
-        }
-      }
-    }
-  }
-}
-.button {
-  height: 80px;
-  line-height: 80px;
-  display: flex;
-  font-size: 30px;
-  .left {
-    width: 50%;
-    background: #F2DC07;
-    color: #fff;
-    text-align: center;
-  }
-  .right {
-    width: 50%;
-    background: #E76E1A;
-    color: #fff;
-    text-align: center;
-  }
-}
-.room-name {
-  background: rgba(5,61,67,0.6);
-  color: #fff;
-  font-size: 24px;
-  height: 60px;
-  line-height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .room-name-item {
-    width: 25%;
-    text-align: center;
-  }
-  .name {
-    font-size: 26px;
-    font-weight: bold;
-    color: #F2DC07;
-  }
-  .button {
-    width: 120px;
-    padding: 0px;
-    background:#E76E1A;
-    text-align: center;
-    height: 40px;
-    font-size: 24px;
-    color: #fff;
-    line-height: 40px;
-  }
-}
-.way {
-  text-align: right;
-  padding: 0 40px;
-  .way-detail {
-    display: inline-block;
-    width: 280px;
-    height: 40px;
-    line-height: 40px;
-    font-size: 24px;
-    color: #F2DC07;
-    transform: skewX(-10deg);
-    background: rgba(5,61,67,0.6);
-    text-align: center;
-  }
-}
-.main {
-  position:fixed;
-  bottom: 0px;
-  height: 300px;
-  background: transparent;
-  .scrollview {
-    flex: 1;
-    color: #000;
-    padding: 40px;
-    font-size: 24px;
-    .message-item {
-      margin-bottom: 10px;
-      .orange {
-        color: #E76E1A;
-      }
-      .white {
-        color: #fff;
-      }
-    }
-    
-  }
-}
-.gameBox {
-  width: 100%;
-  height: 100vh;
-  background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@3.0/src/res/game/bg1.jpg') center no-repeat;
-  background-size: 100% 100%;
-  position:relative;
-  .tipButton {
-    display:inline-block;
-    background:rgba(5,61,67,0.3);
-    color: #fff;
-    font-size: 28px;
-    padding: 20px;
-    min-width: 120px;
-    border-radius: 20px;
-    text-align: center;
-    position: absolute;
-  }
-}
-@action-segment-height: 110px;
-.action-segment {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 15vw;
-  background: rgba(5,61,67,0.6);
-  z-index: 1;
-  color: #fff;
-  .actions-con {
-    padding-bottom: 10px;
-    flex-direction:  column;
-
-    .action-con {
-      height: 100px;
-      width: 100px;
-      border-radius: 50%;
-      transition: .26s;
-
-      .iconfont {
-        font-size: 42px;
-      }
-      .action-name {
-        margin-top: 3px;
-      }
-    }
-  }
-  .action-con-hover {
-    background-color: #eee;
-  }
-}
-
-@threads-segment-height: 270px;
-.threads-segment {
-  position: fixed;
-  left: 0;
-  bottom: -@threads-segment-height;
-  padding: 0 25px;
+.header-swiper {
+  margin: 0 auto;
   width: 100vw;
-  height: @threads-segment-height;
+  height: 460px;
+  border-radius: 8px;
+  background: #eee;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
+}
+.indicators {
   background: transparent;
-  border-top: solid 1px #eee;
-  box-shadow: 0 0 15px rgba(0,0,0,.1);
-  transition: .3s ease-out;
+  transform: translateY(-20px);
+}
+.indicator {
+  margin: 0 8px;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: #d2d8e3;
+  transition: .3s;
 
-  &.active {
-    bottom: @action-segment-height;
+  &.actived {
+    background-color: rgb(208,18,50);
   }
-
-  .thread-con,
-  .thread-collections-con {
-    width: 100%;
-    min-height: 60px;
-    overflow-x: scroll;
-
-    ::-webkit-scrollbar {
-      width: 100px;
-      height: 3px;
-      background: rgba(0, 0, 0, 0.3);
-    }
+}
+.tips {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  margin: 10px 20px;
+  border-radius: 10px;
+  background: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 20px;
+  .tips-content {
+    width: 70%;
+    height: 25px;
+    font-weight: normal;
   }
-  .thread-collection {
-    display: inline-block;
-    margin-top: 20px;
-    margin-right: 8px;
-    padding: 2px 8px;
-    min-width: 70px;
-    height: 40px;
-    line-height: 40px;
-    border: solid 1PX #eee;
-    border-radius: 3px;
+}
+.entrys-con {
+  position: sticky;
+  top: 0;
+  margin-top: 40px;
+  padding: 0 40px;
+  padding-bottom: 25px;
+  background: white;
+  z-index: 1;
+
+  .entry-icon {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+  }
+  .entry-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 22px;
   }
 }
 
-.panelMock {
-  position: fixed;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  background: rgba(0,0,0,0.7);
-  z-index: 10;
-  .panel {
-    position: absolute;
-    bottom: 0px;
-    width: 100vw;
-    height: 60vh;
-    background: #fff;
-    border-radius: 20px 20px 0 0;
-    .paneltop {
-      text-align: right;
-      .closeBtn {
-        height: 50px;
-        width: 50px;
-      }
+.rooms-con {
+  margin: 20px 0;
+  height: 360px;
+  background: transparent;
+  .room {
+    width: 330px;
+    border-radius: 15px;
+  }
+  .room-big {
+    flex-basis: 50%;
+    height: 360px;
+  }
+  .room-small {
+    height: 170px;
+  }
+  image {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+  .fcc {
+    position: relative;
+    .tool-tip {
+      position: absolute;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      background: rgba(98,98,104,0.64);
+      color: #fff;
+      border-radius: 10px;
+
     }
   }
+}
 
+.segment-header{
+  color: #F2DC07;
+}
+.plays-con {
+  background: transparent;
+}
+
+.buttonView {
+  padding: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  .button {
+    color: rgb(61, 97, 39);
+    font-size: 26px;
+    width: 40vw;
+    margin: 10px 0;
+    border: 1px solid rgb(61, 97, 39);
+    border-radius: 15px;
+  }
 }
