--- a/src/pages/packages/play/pages/game_start/index.less
+++ b/src/pages/packages/play/pages/game_start/index.less
@@ -198,7 +198,7 @@
 .gameBox {
   width: 100%;
   height: 100vh;
-  background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@3.0/src/res/game/bg1.jpg') center no-repeat;
+  background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@4.0/src/res/game/bg1.jpg') center no-repeat;
   background-size: 100% 100%;
   position:relative;
   .tipButton {
@@ -288,3 +288,29 @@
   }
 }
 
+.panelMock {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background: rgba(0,0,0,0.7);
+  z-index: 10;
+  .panel {
+    position: absolute;
+    bottom: 0px;
+    width: 100vw;
+    height: 60vh;
+    background: #fff;
+    border-radius: 20px 20px 0 0;
+    padding: 20px;
+    .paneltop {
+      text-align: right;
+      .closeBtn {
+        height: 50px;
+        width: 50px;
+      }
+    }
+  }
+
+}
