--- a/src/pages/room/index.less
+++ b/src/pages/room/index.less
@@ -1,6 +1,6 @@
 .page {
   background: rgba(5,61,67,0.4);
-  padding-bottom: 0px;
+  padding-bottom: 80px;
 }
 .header-swiper {
   margin: 0 auto;
@@ -182,6 +182,9 @@
   }
 }
 .button {
+  position: fixed;
+  bottom:0px;
+  width: 100%;
   height: 80px;
   line-height: 80px;
   display: flex;
