--- a/src/pages/packages/play/pages/game_start/index.less
+++ b/src/pages/packages/play/pages/game_start/index.less
@@ -138,6 +138,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 1;
   .room-name-item {
     width: 25%;
     text-align: center;
@@ -176,6 +178,7 @@
 .main {
   position:fixed;
   bottom: 0px;
+  width: 70%;
   height: 300px;
   background: transparent;
   .scrollview {
@@ -183,6 +186,7 @@
     color: #000;
     padding: 40px;
     font-size: 24px;
+    height: 100%;
     .message-item {
       margin-bottom: 10px;
       .orange {
@@ -198,9 +202,13 @@
 .gameBox {
   width: 100%;
   height: 100vh;
-  background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@4.0/src/res/game/bg1.jpg') center no-repeat;
-  background-size: 100% 100%;
-  position:relative;
+  .gameBg {
+      background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@4.0/src/res/game/bg1.jpg') center no-repeat;
+      position: relative;
+      width: 150%;
+      min-height: 120vh;
+      background-size: 100% 100%;
+  }
   .tipButton {
     display:inline-block;
     background:rgba(5,61,67,0.3);
