--- a/src/pages/message/index.less
+++ b/src/pages/message/index.less
@@ -10,6 +10,16 @@
       text-align: center;
       display: flex;
       justify-content: space-around;
+      View {
+        display: flex;
+        align-items: center;
+        image {
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+        }
+      }
+      
     }
     .userlist {
       padding: 50px 20px;
