--- a/src/pages/message/index.less
+++ b/src/pages/message/index.less
@@ -1,37 +1,26 @@
 .page {
     background: rgba(5,61,67,0.4);
     padding-bottom: 0px;
-    .filter {
+    .userlist {
       background: rgba(5, 61, 67, 0.7);
       font-size: 28px;
       color: #fff;
-      height: 100px;
-      line-height: 100px;
-      text-align: center;
-      display: flex;
-      justify-content: space-around;
-      View {
-        display: flex;
-        align-items: center;
-        image {
-          display: inline-block;
-          width: 30px;
-          height: 30px;
-        }
-      }
-      
-    }
-    .userlist {
-      padding: 50px 20px;
       .userlist-item {
+        width: 100%;
         display:flex;
+        height: 180px;
         justify-content: space-between;
         align-items:center;
-        image {
+        .user-icon {
           width: 100px;
           height: 100px;
           border-radius: 50px;
-          margin: 0 10px 20px 20px ;
+          margin: 0 20px 20px 20px ;
+        }
+        .user-pic {
+          width: 100px;
+          height: 100px;
+          margin-right: 20px;
         }
         .userInfo {
           flex: 1;
@@ -40,31 +29,37 @@
           .name {
             color: #fff;
             font-size: 30px;
+            .role {
+              display: inline-block;
+              background:rgb(206, 188, 8);
+              padding: 5px 6px;
+              border-radius: 5px;
+              vertical-align: middle;
+            }
           }
-          .time {
-            color: rgba(5, 61, 67, 0.4);
+          .id {
+            color: #fff;
             font-size: 26px;
           }
         }
         .buttonArea {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          .normal {
-            font-size: 30px;
-            padding: 15px 10px;
-            border-radius: 15px;
-            background: rgb(5, 61, 67);
-            color: #fff;
-            &.vip {
-              background: rgb(242, 220, 7);
-              color: rgb(5, 61, 67);
-            }
-          }
-          .button-number {
-            color: rgba(5, 61, 67, 0.4);
-            font-size: 26px;
-          }
+          
+        }
+      }
+    }
+    .tools {
+      padding: 50px;
+      .tool-item {
+        height: 100px;
+        line-height: 100px;
+        display:flex;
+        justify-content: space-between;
+        color: #fff;
+        image {
+          width: 40px;
+          height: 40px;
+          vertical-align: middle;
+          padding-right: 10px;
         }
       }
     }
