--- a/src/pages/packages/play/pages/game_start/index.less
+++ b/src/pages/packages/play/pages/game_start/index.less
@@ -203,7 +203,7 @@
   width: 100%;
   height: 100vh;
   .gameBg {
-      background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@5.0/src/res/game/bg1.jpg') center no-repeat;
+      background: url('https://cdn.jsdelivr.net/gh/DailyLearningJS/script-game@6.0/src/res/game/bg1.jpg') center no-repeat;
       position: relative;
       width: 150%;
       min-height: 120vh;
@@ -309,9 +309,10 @@
     bottom: 0px;
     width: 100vw;
     height: 60vh;
-    background: #fff;
+    background:rgba(5,61,67);
     border-radius: 20px 20px 0 0;
     padding: 20px;
+    color: #fff;
     .paneltop {
       text-align: right;
       .closeBtn {
