feat: 调整个人中心跳转逻辑

--- a/src/pages/packages/play/pages/game_start/index.less
+++ b/src/pages/packages/play/pages/game_start/index.less
@@ -302,14 +302,14 @@
   bottom: 0px;
   left: 0px;
   right: 0px;
-  background: rgba(0,0,0,0.7);
+  // background: rgba(0,0,0,0.7);
   z-index: 10;
   .panel {
     position: absolute;
     bottom: 0px;
     width: 100vw;
     height: 60vh;
-    background:rgba(5,61,67);
+    background:rgba(5,61,67,0.3);
     border-radius: 20px 20px 0 0;
     padding: 20px;
     color: #fff;
