--- a/src/pages/account/index.less
+++ b/src/pages/account/index.less
@@ -1,124 +1,67 @@
 .page {
   background: rgba(5,61,67,0.4);
-}
-
-.header-swiper {
-  margin: 0 auto;
-  width: 100vw;
-  height: 460px;
-  border-radius: 8px;
-  background: #eee;
-  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
-}
-.indicators {
-  background: transparent;
-  transform: translateY(-20px);
-}
-.indicator {
-  margin: 0 8px;
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
-  background-color: #d2d8e3;
-  transition: .3s;
-
-  &.actived {
-    background-color: rgb(208,18,50);
-  }
-}
-.tips {
-  height: 60px;
-  display: flex;
-  align-items: center;
-  margin: 10px 20px;
-  border-radius: 10px;
-  background: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 0 20px;
-  .tips-content {
-    width: 70%;
-    height: 25px;
-    font-weight: normal;
-  }
-}
-.entrys-con {
-  position: sticky;
-  top: 0;
-  margin-top: 40px;
-  padding: 0 40px;
-  padding-bottom: 25px;
-  background: white;
-  z-index: 1;
-
-  .entry-icon {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-  }
-  .entry-name {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 22px;
-  }
-}
-
-.rooms-con {
-  margin: 20px 0;
-  height: 360px;
-  background: transparent;
-  .room {
-    width: 330px;
-    border-radius: 15px;
-  }
-  .room-big {
-    flex-basis: 50%;
-    height: 360px;
-  }
-  .room-small {
-    height: 170px;
-  }
-  image {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-  }
-  .fcc {
-    position: relative;
-    .tool-tip {
-      position: absolute;
-      display:flex;
-      align-items: center;
-      justify-content: center;
+  padding-bottom: 0px;
+  .userlist {
+    background: rgba(5, 61, 67, 0.7);
+    font-size: 28px;
+    color: #fff;
+    .userlist-item {
       width: 100%;
-      height: 100%;
-      background: rgba(98,98,104,0.64);
+      display:flex;
+      height: 180px;
+      justify-content: space-between;
+      align-items:center;
+      .user-icon {
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
+        margin: 0 20px 20px 20px ;
+      }
+      .user-pic {
+        width: 100px;
+        height: 100px;
+        margin-right: 20px;
+      }
+      .userInfo {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        .name {
+          color: #fff;
+          font-size: 30px;
+          .role {
+            display: inline-block;
+            background:rgb(206, 188, 8);
+            padding: 5px 6px;
+            border-radius: 5px;
+            vertical-align: middle;
+          }
+        }
+        .id {
+          color: #fff;
+          font-size: 26px;
+        }
+      }
+      .buttonArea {
+        
+      }
+    }
+  }
+  .tools {
+    padding: 50px;
+    .tool-item {
+      height: 100px;
+      line-height: 100px;
+      display:flex;
+      justify-content: space-between;
       color: #fff;
-      border-radius: 10px;
-
+      image {
+        width: 40px;
+        height: 40px;
+        vertical-align: middle;
+        padding-right: 10px;
+      }
     }
   }
 }
 
-.segment-header{
-  color: #F2DC07;
-}
-.plays-con {
-  background: transparent;
-}
-
-.buttonView {
-  padding: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  .button {
-    color: rgb(61, 97, 39);
-    font-size: 26px;
-    width: 40vw;
-    margin: 10px 0;
-    border: 1px solid rgb(61, 97, 39);
-    border-radius: 15px;
-  }
-}
